<resources>
    <string name="app_name">ToDoList</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo_description">This is a missing logo</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_user"><![CDATA[New User ->]]></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>

</resources>